examples/django/015_deploy_app/.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicapp
spec:
  selector:
    app: basicapp
  ports:
  - name: http
    port: 8000
    protocol: TCP
