examples/django/015_deploy_app/.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: basicapp
spec:
  rules:
  - host: mydomain.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basicapp
            port:
              number: 8000
